<resources>
    <string name="app_name">NITR Resources</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="person">person</string>
    <string name="download">Download</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="books">Find Books</string>
    <string name="questions">Find Questions</string>
    <string name="zimbra">Zimbra</string>
    <string name="news">News</string>
    <string name="user">Log Out</string>
    <string name="my_docs">My Docs</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="save_file">Save File</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="devName">Sachin Dehury</string>
    <string name="developer">Developer</string>
    <string name="run">Run</string>
    <string name="common_to_other_branches_too">Common to Other Branches too</string>
    <string name="preview">Preview</string>
</resources>